tests/suite/snapshots/suite__parse__tests__parse__length02_2.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/length02_2.xi:2:14]
   │
 2 │   a = length()
   ·              ┬  
   ·              ╰── Unexpected token
───╯

